fix: modal-overlay z-index now makes sense

--- a/src/app/components/task-item/task-item.component.scss
+++ b/src/app/components/task-item/task-item.component.scss
@@ -155,8 +155,10 @@
     transition: background 0.3s ease, transform 0.2s ease;
   
     &:hover {
-      background: rgba(255, 255, 255, 0.2);
-      color: #bcbcbc;
+      // background: rgba(255, 255, 255, 0.2);
+      // color: #bcbcbc;
+      background: #bcbcbc91;
+      color: #c7c7c7;
       transform: scale(1.05);
     }
   
