--- a/src/app/components/task-list/task-list.component.scss
+++ b/src/app/components/task-list/task-list.component.scss
@@ -31,7 +31,11 @@ h3 {
   
   &:hover {
     // background: #5a5a5a;
-    background: #007bff76;
+    // background: #007bff76;
+    // background: #007bff;
+    // background: #333;
+    background: #bcbcbc91;
+    color: #c7c7c7;
   }
 
   &:disabled {
@@ -104,6 +108,7 @@ select {
 
 input:checked + .slider {
   background-color: #007bff;
+  // background-color: #333;
 }
 
 input:checked + .slider:before {
@@ -120,6 +125,7 @@ input:checked + .slider:before {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
 
 .new-task-btn {
